# RSGen-8k

./: .gitignore  README.md  app.py  datasets  models  pyproject.toml
configs/: default.yaml  train_diffusion4k.yaml  train_zoomldm.yaml
hf_space/: README.md  app.py  requirements.txt
hf_space/src/rsgen8k/: generate.py
hf_space/src/rsgen8k/data/: __init__.py  xlrs_bench.py
hf_space/src/rsgen8k/techniques/: __init__.py  demofusion.py  elastic_diffusion.py  multi_diffusion.py  native.py  registry.py
links/: references.md
manuscript/submission/: README.md  main.aux  main.tex  references.bib
scripts/: benchmark_all.sh  benchmark_case_study.sh  benchmark_seeds.sh  benchmark_single.sh  download_prompts.py  evaluate.sh  generate.py  generate_dataset.sh  setup_env.sh  train_diffusion4k.sh  train_zoomldm.sh
src/rsgen8k/: __init__.py  generate.py  metrics.py
src/rsgen8k/data/: xlrs_bench.py
src/rsgen8k/models/: __init__.py  model_registry.py  pipeline.py  scheduler.py
src/rsgen8k/techniques/: demofusion.py  diffusion4k.py  elastic_diffusion.py  fouriscale.py  freescale.py  infty_diff.py  megafusion.py  multi_diffusion.py  registry.py  zoomldm.py
src/rsgen8k/training/: __init__.py  trainer.py  wavelet_loss.py
tests/: test_app.py  test_data.py  test_generate.py  test_metrics.py  test_model_registry.py  test_scheduler.py  test_technique_registry.py  test_techniques.py  test_training.py
